stylesheets/buttons.css
.button-primary {
    background-color: var(--color-link);
    color: white;
    padding: var(--spacing-small) var(--spacing-large);
    border: none;
    border-radius: 100px;
    cursor: pointer;
    font-family: var(--font-heading);
    font-size: var(--size-button);
        transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
}

.button-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: var(--spacing-large) 0;
}

.button-primary:hover {
    background-color: var(--color-logo);
    color: white;
    transform: translateY(-2px);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
}

